# explore_australia

./: .gitignore  LICENSE  README.md  environment.yml  explore_australia.sublime-project  setup.cfg  setup.py
data/: deposit_locations.csv  deposit_locations.geo.json  stamp_locations.csv  stamp_locations.geo.json
explore_australia/: __init__.py  _version.py  cli.py  coverage.py  endpoints.py  geometry.py  raster.py  reprojection.py  rotation.py  stamp.py  utilities.py  vector.py
jupyter/: raster_coverage_data.ipynb  vector_data.ipynb
test_output/geophysics/gravity/: bouger_gravity_anomaly.tif  isostatic_residual_gravity_anomaly.tif
test_output/geophysics/magnetics/: total_magnetic_intensity.tif  variable_reduction_to_pole.tif
test_output/geophysics/radiometrics/: filtered_potassium_pct.tif  filtered_terrestrial_dose.tif  filtered_thorium_ppm.tif  filtered_uranium_ppm.tif
test_output/remote_sensing/aster/: aloh_groun_content.tif  aloh_group_composition.tif  ferric_oxide_content.tif  ferrous_iron_content.tif  ferrous_iron_index.tif  kaolin_group_index.tif  mgoh_group_content.tif  opaque_index.tif  thermal_infrared_gypsum_index.tif  thermal_infrared_silica_index.tif  tir_quartz_index.tif
tests/: test_coverage.py  test_geometry.py  test_reprojection.py  test_rotation.py  test_utilities.py  test_version.py
tests/reports/: test-output.junit.xml
tests/reports/coverage.html/: _Users_jess_Documents_OzMinerals_data_science_stream_explore_generator_explore_generator___init___py.html  index.html  status.json  (+17 more)
tests/resources/: masked.tif  masked.tif.msk  tmp.tif
