[metadata]
description-file = README.md

[aliases]
test=pytest

[tool:pytest]
addopts = --junitxml=tests/reports/test-output.junit.xml --verbose  --cov=explore_generator --cov-report term --cov-report html --cov-report xml

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:
omit = */_version.py

[coverage:html]
directory = tests/reports/coverage.html

[coverage:xml]
output = tests/reports/coverage.xml
